@@ -1,3 +1,12 @@
+Thu Sep  8 13:20:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ACE-INSTALL.html:
+          Documented which 32bit packages need to be installed on a 64bit
+          linux host for the Android port
+
+        * docs/bczar/bczar.html:
+          Added some packages
+
 Thu Sep  8 08:16:35 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Lib_Find.cpp:
